0.1.6 ()
=====
* Addeded an exception parameters
  to propagate original exceptions
  when raising an internal's exception.
* Fixed exception handling in ICY's answer
  parsing.

0.1.5 (2010-09-06)
=====
* Icy connection was broken
  with previous release, fixed..

0.1.4 (2010-09-06)
=====
* Fixed http headers generation.
  Before,ocaml-cry was sending
  one extra \r\n before starting sending
  the stream..

0.1.3 (2010-08-19)
=====
* Use recursive calls to Unix.write
  everywhere and make it safer.

0.1.2 (2010-02-08)
=====
* Fix the sending code: older versions resulted in a high load and
  in some cases in loss of stream chunks.
* Added manual_update_metadata to update metadata on any source without
  being necessarily connected/streaming on it.

0.1.1 (2009-10-26)
=====
* Fixed ICY source connection; send headers only after receiving "OK2".
* Fixed error: Scanf may raise other exceptions, catching any of them now.

0.1.0 (2009-10-12)
=====
* Initial release