@@ -5,6 +5,9 @@
   when raising an internal's exception.
 * Fixed exception handling in ICY's answer
   parsing.
+* Remove buggy timeout option. 
+* Use Unix.shutdown before closing a network
+  socket.
 
 0.1.5 (2010-09-06)
 =====
